--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "firebase": "^7.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
+    "react-modal": "^3.10.1",
     "react-scripts": "2.1.8",
     "styled-components": "^4.2.0"
   },
